// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichText component renders as expected 1`] = `
<Fragment>
  <div
    className="rte--wrapper"
  >
    <Editor
      cloudChannel="5"
      id="test-id"
      init={
        Object {
          "a11y_advanced_options": true,
          "autoresize_bottom_margin": 0,
          "browser_spellcheck": true,
          "default_link_target": "_blank",
          "encoding": "xml",
          "file_picker_types": "image",
          "forced_root_block": "p",
          "images_file_types": "jpeg,jpg,jfif,pjeg,pjp,png,gif,webp,tif,tiff",
          "images_upload_handler": [Function],
          "invalid_elements": "script",
          "link_assume_external_targets": true,
          "menubar": "",
          "paste_data_images": true,
          "plugins": Array [
            "advlist",
            "autoresize",
            "lists",
            "paste",
            "help",
            "link",
            "image",
          ],
          "relative_urls": false,
          "remove_trailing_brs": true,
          "selector": "textarea",
          "setup": [Function],
          "toolbar": "undo redo | style | bold italic strikethrough forecolor | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | formatselect | link | eapdImageUpload | help",
          "toolbar_mode": "wrap",
        }
      }
      onEditorChange={[Function]}
      value="initial rich text value"
    />
  </div>
</Fragment>
`;

exports[`RichText component renders as expected with an error message 1`] = `
<Fragment>
  <div
    className="rte--wrapper ds-c-field--error ds-u-radius"
  >
    <Editor
      cloudChannel="5"
      id="test-id"
      init={
        Object {
          "a11y_advanced_options": true,
          "autoresize_bottom_margin": 0,
          "browser_spellcheck": true,
          "default_link_target": "_blank",
          "encoding": "xml",
          "file_picker_types": "image",
          "forced_root_block": "p",
          "images_file_types": "jpeg,jpg,jfif,pjeg,pjp,png,gif,webp,tif,tiff",
          "images_upload_handler": [Function],
          "invalid_elements": "script",
          "link_assume_external_targets": true,
          "menubar": "",
          "paste_data_images": true,
          "plugins": Array [
            "advlist",
            "autoresize",
            "lists",
            "paste",
            "help",
            "link",
            "image",
          ],
          "relative_urls": false,
          "remove_trailing_brs": true,
          "selector": "textarea",
          "setup": [Function],
          "toolbar": "undo redo | style | bold italic strikethrough forecolor | alignleft aligncenter alignright alignjustify | outdent indent | numlist bullist | formatselect | link | eapdImageUpload | help",
          "toolbar_mode": "wrap",
        }
      }
      onEditorChange={[Function]}
      value="initial rich text value"
    />
  </div>
  <span
    className="ds-c-inline-error ds-c-field__error-message ds-u-fill--white ds-u-padding-top--1"
    role="alert"
  >
    test error msg
  </span>
</Fragment>
`;
